# tree-sitter-latex

./: Cargo.toml
bindings/: build.rs  lib.rs
